<resources>
    <string name="app_name">COOKADE</string>

    <!-- INTRO -->
    <string name="welcome_intro">Benvenuto su Cookade!</string>
    <string name="login_button">LOGIN</string>
    <string name="not_registered">"Non sei registrato? Clicca qui!"</string>

    <!-- LOGIN -->
    <string name="log_in">Effettua il Login</string>
    <string name="email">Indirizzo e-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Password dimenticata?</string>
    <string name="enter">ENTRA</string>
    <string name="no_account">Non hai un account? Registrati!</string>

    <!-- REGISTER -->
    <string name="register_compile">Compila tutti i campi per completare la registrazione!</string>
    <string name="name_form">Nome</string>
    <string name="surname_form">Cognome</string>
    <string name="email_form">E-mail</string>
    <string name="cellphone_form">Numero di telefono</string>
    <string name="register">REGISTRATI</string>
    <string name="already_registered">Già registrato? Effettua il login!</string>

    <!-- RESTAURANT HOME-->
    <string name="search_restaurant">Cerca un ristorante…</string>
    <string name="search_tipo">CERCA PER TIPOLOGIA</string>
    <string name="toprated">TOP RATED</string>
    <string name="pizza">PIZZERIE</string>
    <string name="burger">PUB</string>
    <string name="italian">CUCINA ITALIANA</string>
    <string name="chinese">CUCINA CINESE</string>
    <string name="japanese">CUCINA GIAPPONESE</string>
    <string name="indian">CUCINA INDIANA</string>
    <string name="greek">CUCINA GRECA</string>
    <string name="vegan">VEGAN</string>

    <!-- RESTAURANT CARD -->
    <string name="restaurant_name">Nome ristorante</string>
    <string name="restaurant_rating">Rating: </string>
    <string name="number">0</string>
    <string name="restaurant_type">Cucina: </string>
    <string name="restaurant_type_value">Tipo cucina…</string>
    <string name="restaurant_desc">Descrizione: </string>
    <string name="restaurant_desc_value">Descrizione ristorante…</string>

    <!-- PROFILE -->
    <string name="welcome_profile">BENVENUTO</string>
    <string name="username">Nome Utente</string>
    <string name="name">Nome</string>
    <string name="surname">Cognome</string>
    <string name="new_password">Nuova password</string>
    <string name="repeat_password">Ripeti password</string>
    <string name="save">Salva</string>
    <string name="staff_member">Sei un membro dello staff? Clicca qui!</string>
    <string name="delete_account">Elimina account  </string>
    <string name="modifica_profilo">Modifica i tuoi dati</string>
    <string name="modifica_password">Modifica la tua password</string>
    <string name="vuoto">_ _ _ _ _</string>

    <!-- CREATE/MODIFY RESTAURANT -->
    <string name="create_compile">Compila il form per creare il tuo ristorante!</string>
    <string name="modify_compile">Modifica le info del tuo ristorante. Inserisci i nuovi dati da aggiornare</string>
    <string name="desc">Descrizione</string>
    <string name="address">Indirizzo</string>
    <string name="start_time">Inizio Orario Lavorativo</string>
    <string name="end_time">Fine Orario Lavorativo</string>
    <string name="cellphone">Telefono</string>
    <string name="food_type">Categoria cibo</string>
    <string name="load_image">Carica immagine</string>
    <string name="load">Carica</string>
    <string name="create">CREA</string>
    <string name="apply">APPLICA</string>

    <!-- UPGRADE -->
    <string name="upgrade_compile">Compila tutti i campi per completare l\'upgrade!</string>
    <string name="role">Qual è il tuo ruolo?</string>
    <string name="owner">Proprietario</string>
    <string name="employee">Dipendente</string>
    <string name="restaurant_code">Codice ristorante</string>
    <string name="assuntion_date">Data di assunzione</string>
    <string name="part_time">Part-Time</string>

    <!-- PRODUCT CARD -->
    <string name="product_name">Nome prodotto</string>
    <string name="add">AGGIUNGI</string>
    <string name="remove">Rimuovi</string>

    <!-- CREA MENU -->
    <string name="inserisci_prodotti">Inserisci i prodotti nel menù</string>
    <string name="aggiungi_bevanda">Aggiungi una bevanda</string>
    <string name="aggiungi_antipasto">Aggiungi un antipasto</string>
    <string name="aggiungi_primo">Aggiungi un primo</string>
    <string name="aggiungi_secondo">Aggiungi un secondo</string>
    <string name="aggiungi_contorno">Aggiungi un contorno</string>
    <string name="aggiungi_dolce">Aggiungi un dolce</string>

    <!-- ADD TO MENU -->
    <string name="add_product">Aggiungi prodotto</string>
    <string name="product_price">Prezzo prodotto (€)</string>
    <string name="product_desc">Descrizione prodotto</string>

    <!-- MANAGEMENT -->
    <string name="create_new">CREA UNA NUOVA ATTIVITÀ</string>
    <string name="modify_menu">Modifica</string>

    <!-- MENU -->
    <string name="menu">Menù</string>
    <string name="beverages">Bevande</string>
    <string name="appetizers">Antipasti</string>
    <string name="firsts">Primi</string>
    <string name="seconds">Secondi</string>
    <string name="garnishes">Contorni</string>
    <string name="sweets">Dolci</string>
    <string name="checkout">Checkout</string>
    <string name="fine">Fine</string>

    <!-- RESTAURANT DETAILS -->
    <string name="contacts">Contatti:</string>
    <string name="address_details">Indirizzo:</string>
    <string name="address_details_value">Indirizzo ristorante…</string>
    <string name="show_menu">Visualizza Menu</string>
    <string name="edit_restaurant">Modifica</string>
    <string name="delete_restaurant">Elimina</string>
    <string name="rate">Valutaci!</string>
    <string name="opzioni">Opzioni ristoratore</string>

    <!-- CART MENU -->
    <string name="cart">Carrello</string>
    <string name="riepilogo">Riepilogo ordine</string>
    <string name="genera">Genera QRCode</string>
    <string name="totale">Totale:</string>
    <string name="confirm_quantity">Inserisci la quantita</string>
    <string name="elimina">ELIMINA</string>
    <string name="noproduct">Non c\'è ancora nessun prodotto nel tuo carrello.</string>

    <!-- QR MENU -->
    <string name="qrcode">QRCode</string>
    <string name="scanner">FAI SCANNERIZZARE IL QRCODE AL PERSONALE!</string>
    <string name="no_qrcode">Non sono ancora presenti QRCodes. Visita un ristorante e vai sul carrello per effettuare un ordine!</string>

    <!-- ORDERS -->
    <string name="order">Ordine</string>
    <string name="quantity">Quantità:</string>

    <!-- GESTIONE LAVORO -->
    <string name="job">GESTIONE LAVORO</string>
    <string name="scan">Scannerizza QRCode</string>
    <string name="your_orders">ORDINI DA EFFETTUARE</string>
    <string name="order_number">NUMERO ORDINE</string>
    <string name="zero_orders">Attualmente non ci sono ordini in attesa.</string>
    <string name="delete_orders">ELIMINA ORDINI</string>

    <!-- NAVBARS -->
    <string name="home">Home</string>
    <string name="profile">Profilo</string>
    <string name="Work">Lavoro</string>
    <string name="managemenet">Gestione</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="product_quantity">0</string>

</resources>