<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="15dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:background="@drawable/red_button"
            android:gravity="center"
            android:text="@string/add_product"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nome_prodotto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name"
            android:textColor="@color/red"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/prezzo_prodotto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_price"
            android:textColor="@color/red"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/descrizione_prodotto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_desc"
            android:textColor="@color/red"
            android:textSize="18dp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>
