<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_splash"
    android:orientation="vertical"
    tools:context=".fragment.FragmentProfilo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_profilo_utente"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/img_profilo_utente"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerVertical="true"
                    android:maxWidth="100dp"
                    android:maxHeight="100dp"
                    android:minWidth="100dp"
                    android:minHeight="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/defaultuserimg" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/benvenutoprofilo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:layout_toEndOf="@id/card_profilo_utente"
                android:text="@string/welcome_profile"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/settings"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="45dp"
                android:layout_toEndOf="@+id/benvenutoprofilo"
                app:srcCompat="@drawable/car_ui_icon_settings" />

            <TextView
                android:id="@+id/nicknameprofilo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/benvenutoprofilo"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:layout_toEndOf="@id/card_profilo_utente"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/form_modifica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/user_form"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

            <TextView
                android:id="@+id/t_nomeprofilo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nomeprofilo"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_input"
                android:gravity="center"
                android:hint="@string/name"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/t_cognomeprofilo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surname"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cognomeprofilo"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_input"
                android:gravity="center"
                android:hint="@string/surname"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/t_telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cellphone"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/telefonoprofilo"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_input"
                android:gravity="center"
                android:hint="@string/cellphone"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/t_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emailprofilo"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_input"
                android:gravity="center"
                android:hint="@string/email_form"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>