<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_splash"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/form_modifica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/user_form"
                android:orientation="vertical"
                android:padding="30dp"
                android:paddingTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:text="@string/modifica_profilo"
                    android:textColor="@color/red"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/t_nomesettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/red"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nomesettings"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/custom_input"
                    android:gravity="center"
                    android:hint="@string/name"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/t_cognomesettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/surname"
                    android:textColor="@color/red"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/cognomesettings"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/custom_input"
                    android:gravity="center"
                    android:hint="@string/surname"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/t_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/red"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/passwordsettings"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/custom_input"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/t_ripetipassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repeat_password"
                    android:textColor="@color/red"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/ripetipasswordsettings"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/custom_input"
                    android:gravity="center"
                    android:hint="@string/repeat_password"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="15dp" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintmembrostaff"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintsalva">

                <TextView
                    android:id="@+id/membrostaff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/staff_member"
                    android:textColor="@color/red"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintsalva"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:background="@drawable/red_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintmembrostaff">

                <TextView
                    android:id="@+id/salva"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraintsalva">

                <TextView
                    android:id="@+id/elimina_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/garbage"
                    android:paddingVertical="10dp"
                    android:text="@string/delete_account"
                    android:textColor="@color/red"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>